// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-base-combobox-item renders card 1`] = `
<lightning-base-combobox-item
  class="slds-listbox__option_entity"
>
  #shadow-root(open)
    <span
      class="slds-media__figure"
    >
      <lightning-icon
        class="slds-icon-utility-search slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon-text-default slds-icon_small"
                data-key="search"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
          </lightning-primitive-icon>
      </lightning-icon>
    </span>
    <span
      class="slds-media__body"
    >
      <span
        class="slds-listbox__option-text slds-listbox__option-text_entity"
        title="Item Example"
      >
        <span
          class="slds-truncate"
        >
          <lightning-base-combobox-formatted-text>
            #shadow-root(open)
              Item Example
          </lightning-base-combobox-formatted-text>
        </span>
      </span>
      <span
        class="slds-listbox__option-meta slds-listbox__option-meta_entity"
        title="Item example info"
      >
        <span
          class="slds-truncate"
        >
          <lightning-base-combobox-formatted-text>
            #shadow-root(open)
              Item example info
          </lightning-base-combobox-formatted-text>
        </span>
      </span>
    </span>
</lightning-base-combobox-item>
`;

exports[`lightning-base-combobox-item renders card w/ highlighted text 1`] = `
<lightning-base-combobox-item
  class="slds-listbox__option_entity"
>
  #shadow-root(open)
    <span
      class="slds-media__figure"
    >
      <lightning-icon
        class="slds-icon-utility-search slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon-text-default slds-icon_small"
                data-key="search"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
          </lightning-primitive-icon>
      </lightning-icon>
    </span>
    <span
      class="slds-media__body"
    >
      <span
        class="slds-listbox__option-text slds-listbox__option-text_entity"
        title="Highlighted Text"
      >
        <span
          class="slds-truncate"
        >
          <lightning-base-combobox-formatted-text>
            #shadow-root(open)
              Hi
              <strong>
                ghl
              </strong>
              ighted Text
          </lightning-base-combobox-formatted-text>
        </span>
      </span>
      <span
        class="slds-listbox__option-meta slds-listbox__option-meta_entity"
        title="Highlighted Text"
      >
        <span
          class="slds-truncate"
        >
          <lightning-base-combobox-formatted-text>
            #shadow-root(open)
              Hi
              <strong>
                ghl
              </strong>
              ighted Text
          </lightning-base-combobox-formatted-text>
        </span>
      </span>
    </span>
</lightning-base-combobox-item>
`;

exports[`lightning-base-combobox-item renders card w/o subtext 1`] = `
<lightning-base-combobox-item
  class="slds-listbox__option_entity"
>
  #shadow-root(open)
    <span
      class="slds-media__figure"
    >
      <lightning-icon
        class="slds-icon-utility-search slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon-text-default slds-icon_small"
                data-key="search"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
          </lightning-primitive-icon>
      </lightning-icon>
    </span>
    <span
      class="slds-media__body"
    >
      <span
        class="slds-listbox__option-text slds-listbox__option-text_entity"
        title="Item Example"
      >
        <span
          class="slds-truncate"
        >
          <lightning-base-combobox-formatted-text>
            #shadow-root(open)
              Item Example
          </lightning-base-combobox-formatted-text>
        </span>
      </span>
    </span>
</lightning-base-combobox-item>
`;

exports[`lightning-base-combobox-item renders inline text 1`] = `
<lightning-base-combobox-item
  class="slds-media_small slds-listbox__option_plain"
>
  #shadow-root(open)
    <span
      class="slds-media__figure"
    >
      <lightning-icon
        class="slds-icon-utility-search slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon-text-default slds-icon_x-small"
                data-key="search"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
          </lightning-primitive-icon>
      </lightning-icon>
    </span>
    <span
      class="slds-media__body"
    >
      <lightning-base-combobox-formatted-text
        class="slds-truncate"
        title="Inline Example"
      >
        #shadow-root(open)
          Inline Example
      </lightning-base-combobox-formatted-text>
    </span>
</lightning-base-combobox-item>
`;

exports[`lightning-base-combobox-item renders inline text w/ alternative text for card 1`] = `
<lightning-base-combobox-item
  class="slds-listbox__option_entity"
>
  #shadow-root(open)
    <span
      class="slds-media__figure"
    >
      <lightning-icon
        class="slds-icon-utility-search slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon-text-default slds-icon_small"
                data-key="search"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
          </lightning-primitive-icon>
          <span
            class="slds-assistive-text"
          >
            example alternative text
          </span>
      </lightning-icon>
    </span>
    <span
      class="slds-media__body"
    >
      <span
        class="slds-listbox__option-text slds-listbox__option-text_entity"
        title="example text"
      >
        <span
          class="slds-truncate"
        >
          <lightning-base-combobox-formatted-text>
            #shadow-root(open)
              example text
          </lightning-base-combobox-formatted-text>
        </span>
      </span>
    </span>
</lightning-base-combobox-item>
`;

exports[`lightning-base-combobox-item renders inline text w/ alternative text for inline 1`] = `
<lightning-base-combobox-item
  class="slds-media_small slds-listbox__option_plain"
>
  #shadow-root(open)
    <span
      class="slds-media__figure"
    >
      <lightning-icon
        class="slds-icon-utility-search slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon-text-default slds-icon_x-small"
                data-key="search"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
          </lightning-primitive-icon>
          <span
            class="slds-assistive-text"
          >
            example alternative text
          </span>
      </lightning-icon>
    </span>
    <span
      class="slds-media__body"
    >
      <lightning-base-combobox-formatted-text
        class="slds-truncate"
        title="example text"
      >
        #shadow-root(open)
          example text
      </lightning-base-combobox-formatted-text>
    </span>
</lightning-base-combobox-item>
`;

exports[`lightning-base-combobox-item renders inline text w/ highlighted text 1`] = `
<lightning-base-combobox-item
  class="slds-media_small slds-listbox__option_plain"
>
  #shadow-root(open)
    <span
      class="slds-media__figure"
    >
      <lightning-icon
        class="slds-icon-utility-search slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon-text-default slds-icon_x-small"
                data-key="search"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
          </lightning-primitive-icon>
      </lightning-icon>
    </span>
    <span
      class="slds-media__body"
    >
      <lightning-base-combobox-formatted-text
        class="slds-truncate"
        title="Highlighted Text"
      >
        #shadow-root(open)
          Hi
          <strong>
            ghl
          </strong>
          ighted Text
      </lightning-base-combobox-formatted-text>
    </span>
</lightning-base-combobox-item>
`;
